force-app/main/default/objects/Contact/fields/Auto_In_Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Auto_In_Service_Area__c</fullName>
    <description>Computed: TRUE when Indiana_County_of_Residence__c is in SFTS's service area per ADR-011 (Marion, Shelby, Johnson, Hancock). Read-only. Sharing-rule filters and reports should use this rather than re-encoding the county list.</description>
    <formula>OR(
  ISPICKVAL(Indiana_County_of_Residence__c, "Marion"),
  ISPICKVAL(Indiana_County_of_Residence__c, "Shelby"),
  ISPICKVAL(Indiana_County_of_Residence__c, "Johnson"),
  ISPICKVAL(Indiana_County_of_Residence__c, "Hancock")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto In Service Area</label>
    <type>Checkbox</type>
</CustomField>