force-app/main/default/objects/Contact/fields/caseman__AgeCategory__c.field-meta.xml
<CustomField>
    <fullName>caseman__AgeCategory__c</fullName>
    <label>Age Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>