force-app/main/default/objects/Contact/fields/caseman__EmergencyContact__c.field-meta.xml
<CustomField>
    <fullName>caseman__EmergencyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>