force-app/main/default/objects/Contact/fields/caseman__EmergencyContactPhone__c.field-meta.xml
<CustomField>
    <fullName>caseman__EmergencyContactPhone__c</fullName>
    <formula>caseman__EmergencyContact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emergency Contact Phone</label>
    <type>Text</type>
</CustomField>