force-app/main/default/objects/Contact/fields/caseman__EmergencyContactRole__c.field-meta.xml
<CustomField>
    <fullName>caseman__EmergencyContactRole__c</fullName>
    <description>The relationship between the Contact and their Emergency Contact.</description>
    <inlineHelpText>The relationship between the Contact and their Emergency Contact.</inlineHelpText>
    <label>Emergency Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>