force-app/main/default/objects/Contact/fields/caseman__LegalName__c.field-meta.xml
<CustomField>
    <fullName>caseman__LegalName__c</fullName>
    <description>The legal name of the Contact. Use this field if you need to track legal name for administrative reasons or to assist Contact with official paperwork.</description>
    <inlineHelpText>The legal name of the Contact. Use this field if you need to track legal name for administrative reasons or to assist Contact with official paperwork.</inlineHelpText>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>