force-app/main/default/objects/Contact/fields/caseman__PhotoFileID__c.field-meta.xml
<CustomField>
    <fullName>caseman__PhotoFileID__c</fullName>
    <description>An ID generated and used by Salesforce to manage Client Photo files. Not intended for page layouts.</description>
    <label>Photo File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>