force-app/main/default/objects/Contact/fields/caseman__PreferredCommunicationMethod__c.field-meta.xml
<CustomField>
    <fullName>caseman__PreferredCommunicationMethod__c</fullName>
    <description>The Contact&apos;s preferred communication method. Values are determined by your Admin.</description>
    <inlineHelpText>The Contact&apos;s preferred communication method. Values are determined by your Admin.</inlineHelpText>
    <label>Preferred Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>