force-app/main/default/objects/Contact/fields/caseman__PreferredPhoneField__c.field-meta.xml
<CustomField>
    <fullName>caseman__PreferredPhoneField__c</fullName>
    <description>The contact&apos;s preferred phone number field, will update the Preferred Phone Number field.</description>
    <inlineHelpText>The contact&apos;s preferred phone number field, will update the Preferred Phone Number field.</inlineHelpText>
    <label>Preferred Phone Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Other Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>