force-app/main/default/objects/Contact/fields/caseman__Pronouns__c.field-meta.xml
<CustomField>
    <fullName>caseman__Pronouns__c</fullName>
    <description>The pronoun set used by the client to refer to themself.</description>
    <inlineHelpText>The pronoun set used by the client to refer to themself.</inlineHelpText>
    <label>Pronouns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>she/her/hers</fullName>
            </value>
            <value>
                <fullName>he/him/his</fullName>
            </value>
            <value>
                <fullName>they/them/theirs</fullName>
            </value>
            <value>
                <fullName>other/ask me</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>