force-app/main/default/objects/Contact/fields/Days_Since_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Contact__c</fullName>
    <description>Days since the most recent Case_Note interaction. Drives "stale cases" alerts and home-page card.</description>
    <formula>IF(ISBLANK(Last_Contact_Date__c), NULL, TODAY() - DATEVALUE(Last_Contact_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Days Since Last Contact</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>