force-app/main/default/objects/Contact/fields/Donor_Type__c.field-meta.xml
<CustomField>
    <fullName>Donor_Type__c</fullName>
    <description>If this Contact is a donor, what kind. Null means not a donor (the Contact is a survivor, board member, or other relationship). A Contact can be both a survivor and a donor — these fields are independent.</description>
    <inlineHelpText>Leave blank if this Contact is not a donor.</inlineHelpText>
    <label>Donor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Government Grant</fullName>
            </value>
            <value>
                <fullName>Faith Organization</fullName>
            </value>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>