force-app/main/default/objects/Contact/fields/Indiana_ACP_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Indiana_ACP_Effective_Date__c</fullName>
    <description>Date the client's Indiana ACP enrollment took effect. The Indiana Attorney General's office issues a certification card with this date.</description>
    <label>Indiana ACP Effective Date</label>
    <type>Date</type>
</CustomField>