force-app/main/default/objects/Contact/fields/Indiana_ACP_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Indiana_ACP_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the client is enrolled in the Indiana Address Confidentiality Program. When TRUE, the client's actual address must be suppressed in all displays and reports; use the ACP substitute address only.</description>
    <inlineHelpText>Indiana ACP provides a substitute address to keep survivors safe. NEVER display the real mailing address when this is checked.</inlineHelpText>
    <label>Indiana ACP Enrolled</label>
    <type>Checkbox</type>
</CustomField>