force-app/main/default/objects/Contact/fields/Indiana_County_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Indiana_County_of_Residence__c</fullName>
    <description>The client's county of residence. Drives in-service-area logic and ICJI reporting. References the Indiana_County global value set used across all SFTS objects.</description>
    <label>Indiana County of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indiana_County</valueSetName>
    </valueSet>
</CustomField>