force-app/main/default/objects/Contact/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>Most recent Case_Note interaction date for this Contact. Maintained by the Case_Note insert Flow. Powers Days_Since_Last_Contact + "stale cases" list views.</description>
    <label>Last Contact Date</label>
    <type>DateTime</type>
</CustomField>