force-app/main/default/objects/Contact/fields/Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Primary_Language__c</fullName>
    <description>The client's preferred language for services. Helps when arranging interpretation. Free text — could be English, Spanish, Mandarin, ASL, etc.</description>
    <label>Primary Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>