force-app/main/default/objects/Contact/fields/Total_Service_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Hours__c</fullName>
    <description>Lifetime cumulative service hours delivered to this Contact across all Service_Episode records. Maintained by the Service_Episode insert/update Flow.</description>
    <label>Total Service Hours (Lifetime)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>