force-app/main/default/objects/Contact/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <description>Whether the client is a U.S. military veteran. Required for some VOCA sub-reports and unlocks veteran-specific referral pathways.</description>
    <label>Veteran Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Client Refused</fullName><default>false</default><label>Client Refused</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>