force-app/main/default/objects/Contact/fields/VOCA_Disability__c.field-meta.xml
<CustomField>
    <fullName>VOCA_Disability__c</fullName>
    <description>Whether the client identifies as having a disability. Used for VOCA grant reporting. Use the disabilities/accommodations notes field on related records for specifics.</description>
    <label>Disability (VOCA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Client Doesn't Know</fullName><default>false</default><label>Client Doesn't Know</label></value>
            <value><fullName>Client Refused</fullName><default>false</default><label>Client Refused</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>