force-app/main/default/objects/Contact/fields/VOCA_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>VOCA_Ethnicity__c</fullName>
    <description>Hispanic/Latino origin. Per federal standards, ethnicity is tracked separately from race.</description>
    <label>Ethnicity (VOCA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Hispanic or Latino</fullName><default>false</default><label>Hispanic or Latino</label></value>
            <value><fullName>Non-Hispanic or Non-Latino</fullName><default>false</default><label>Non-Hispanic or Non-Latino</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Client Doesn't Know</fullName><default>false</default><label>Client Doesn't Know</label></value>
            <value><fullName>Client Refused</fullName><default>false</default><label>Client Refused</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>