force-app/main/default/objects/Contact/fields/VOCA_LEP__c.field-meta.xml
<CustomField>
    <fullName>VOCA_LEP__c</fullName>
    <description>Limited English Proficiency. Indicates whether the client speaks English less than "very well" and may need translation/interpretation services.</description>
    <label>Limited English Proficiency (VOCA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes - LEP</fullName><default>false</default><label>Yes — Limited English Proficient</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Client Refused</fullName><default>false</default><label>Client Refused</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>