force-app/main/default/objects/Contact/fields/VOCA_Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>VOCA_Sexual_Orientation__c</fullName>
    <description>Sexual orientation for VOCA reporting. Values follow federal grant reporting categories. Always optional and self-reported.</description>
    <label>Sexual Orientation (VOCA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Heterosexual or Straight</fullName><default>false</default><label>Heterosexual or Straight</label></value>
            <value><fullName>Gay or Lesbian</fullName><default>false</default><label>Gay or Lesbian</label></value>
            <value><fullName>Bisexual</fullName><default>false</default><label>Bisexual</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Client Doesn't Know</fullName><default>false</default><label>Client Doesn't Know</label></value>
            <value><fullName>Client Refused</fullName><default>false</default><label>Client Refused</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>