force-app/main/default/objects/Contact/validationRules/ACP_Date_Required_When_Enrolled.validationRule-meta.xml
<ValidationRule>
    <fullName>ACP_Date_Required_When_Enrolled</fullName>
    <active>true</active>
    <description>If Indiana ACP Enrolled is checked, the ACP Effective Date is required (the date the Indiana Attorney General office issued the certification). Safety-critical: without the date, we can't validate ACP coverage.</description>
    <errorConditionFormula>AND(Indiana_ACP_Enrolled__c = TRUE, ISBLANK(Indiana_ACP_Effective_Date__c))</errorConditionFormula>
    <errorDisplayField>Indiana_ACP_Effective_Date__c</errorDisplayField>
    <errorMessage>When Indiana ACP Enrolled is checked, you must also enter the ACP Effective Date from the Indiana Attorney General certification card.</errorMessage>
</ValidationRule>