force-app/main/default/objects/Contact/listViews/All_Survivors_Hide_TRAINING.listView-meta.xml
<ListView>
    <fullName>All_Survivors_Hide_TRAINING</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Indiana_County_of_Residence__c</columns>
    <columns>Last_Contact_Date__c</columns>
    <columns>Days_Since_Last_Contact__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>TRAINING</value>
    </filters>
    <label>All Survivors (Hide TRAINING)</label>
</ListView>