force-app/main/default/objects/Contact/listViews/Survivors_Needing_Followup.listView-meta.xml
<ListView>
    <fullName>Survivors_Needing_Followup</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Last_Contact_Date__c</columns>
    <columns>Days_Since_Last_Contact__c</columns>
    <columns>caseman__AgeCategory__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Days_Since_Last_Contact__c</field>
        <operation>greaterThan</operation>
        <value>14</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>TRAINING</value>
    </filters>
    <label>Survivors Needing Follow-up (14+ days)</label>
</ListView>